--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env DATABASE_URL=postgresql://cofactor:securepassword@localhost:5432/cofactor_db next dev",
+    "dev": "dotenv -e .env -- next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "prisma:generate": "cross-env DATABASE_URL=postgresql://cofactor:securepassword@localhost:5432/cofactor_db npx prisma generate",
-    "prisma:push": "cross-env DATABASE_URL=postgresql://cofactor:securepassword@localhost:5432/cofactor_db npx prisma db push",
-    "prisma:studio": "cross-env DATABASE_URL=postgresql://cofactor:securepassword@localhost:5432/cofactor_db npx prisma studio"
+    "prisma:generate": "dotenv -e .env -- npx prisma generate",
+    "prisma:push": "dotenv -e .env -- npx prisma db push",
+    "prisma:studio": "dotenv -e .env -- npx prisma studio"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
@@ -19,10 +19,12 @@
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "isomorphic-dompurify": "^2.35.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.12",
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-diff-viewer-continued": "^3.4.0",
@@ -33,6 +35,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "cross-env": "^10.1.0",
